# cowork-server

./: .bazelignore  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .golangci.yml  .pr-tmp-comments.json  AGENTS.md  AGNETS.md  BUILD.bazel  CLAUDE.md  CODE_OF_CONDUCT.md  DEVELOPMENT.md  LICENSE  MODULE.bazel  Makefile  README.md  VERSION  bash.exe.stackdump  build.gradle.kts  cufk.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fuck.vue  package-lock.json  package.json  settings.gradle.kts  ㅁㄹㅇㅁㅇㄴㄹ.yaml  ㅇㅁㄴㄹㅁㄴㄹㅁㄴ.ㄷㅈㅁㄱ
.agents/skills/commit/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.agents/skills/write-pr/: SKILL.md
.claude/: settings.json  settings.local.json
.claude/agents/: web-researcher.md
.claude/rules/: config.md  database.md  fail-safe.md  security.md
.claude/skills/grill-me/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/write-pr/: SKILL.md
.codex/: config.toml
.github/: copilot-instructions.md
.github/workflows/: cowork-pr-cleanup.yml  cowork-pr-contrib.yml  cowork-prod-cd.yml  cowork-prod-ci.yml  cowork-stage-ci.yml  cowork-voice-ci.yml
.harness/: sync.yml
cowork-authorization/: .env.example  Dockerfile  Makefile  README.md  go.mod  go.sum  local.dockerfile  prod.dockerfile
cowork-authorization/cmd/: main.go
cowork-authorization/docs/: docs.go  swagger.json  swagger.yaml
cowork-authorization/internal/client/: user_client.go
cowork-authorization/internal/config/: config.go
cowork-authorization/internal/domain/: processed_event.go  refresh_token.go  user.go
cowork-authorization/internal/handler/: auth_handler.go  event_handler.go
cowork-authorization/internal/monitoring/: http_metrics.go
cowork-authorization/internal/repository/: processed_event_repository.go  refresh_token_repository.go  user_repository.go
cowork-authorization/pkg/eureka/: client.go
cowork-channel/: README.md  build.gradle.kts  local.dockerfile  prod.dockerfile
cowork-chat/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.mjs  jest.config.js  local.dockerfile  package-lock.json  package.json  prod.dockerfile  tsconfig.json
cowork-chat/public/: asyncapi.json
cowork-chat/schema/: message.schema.md
cowork-chat/src/: app.module.ts  chat.gateway.ts  chat.module.ts  chat.service.ts  health.controller.ts  main.ts  message-payload.dto.ts  message-payload.interface.ts
cowork-chat/test/: test.js
cowork-config/: README.md  build.gradle.kts  local.dockerfile  prod.dockerfile
cowork-dm/: .gitignore  DOCKERFILE_TODO.md  README.md  local.dockerfile  package-lock.json  package.json  prod.dockerfile  tsconfig.json
cowork-dm/src/: dm.module.ts  health.controller.ts  main.ts
cowork-gateway/: BUILD.bazel  Dockerfile  README.md  build.gradle.kts  local.dockerfile  prod.dockerfile
cowork-gateway/src/main/kotlin/com/cowork/gateway/: CoworkGatewayApplication.kt
cowork-gateway/src/main/kotlin/com/cowork/gateway/controller/: FallbackController.kt  HealthCheckController.kt  SwaggerUiController.kt
cowork-gateway/src/main/kotlin/com/cowork/gateway/filter/: AccessLogFilter.kt  ApiResponseWrapperFilter.kt  AuthHeaderMutatingFilter.kt  RateLimitConfig.kt  RateLimitKeyResolver.kt  SdkLoggingProperties.kt  TeamMemberResolvingFilterFactory.kt  WebClientConfig.kt
cowork-gateway/src/main/kotlin/com/cowork/gateway/health/: ServiceStatus.kt
cowork-gateway/src/main/kotlin/com/cowork/gateway/response/: CommonApiResponse.kt
cowork-gateway/src/main/kotlin/com/cowork/gateway/security/: JwtProperties.kt  JwtReactiveAuthenticationManager.kt  JwtServerAuthenticationConverter.kt  RoleGrantedAuthority.kt  SecurityConfig.kt
cowork-gateway/src/main/resources/: application.yml  logback-spring.xml
cowork-monitoring/: README.md
cowork-monitoring/alertmanager/: alertmanager.yml
cowork-monitoring/blackbox/: blackbox.yml
cowork-monitoring/exporters/: README.md
cowork-monitoring/loki/: loki-config.yml
cowork-monitoring/prometheus/: prometheus.yml
cowork-monitoring/promtail/: promtail-config.yml
cowork-notification/: .env.example  Dockerfile  Makefile  README.md  build.gradle.kts  go.mod  go.sum  local.dockerfile  prod.dockerfile
cowork-notification/docs/: docs.go  swagger.json  swagger.yaml
cowork-preference/: README.md  build.gradle.kts  local.dockerfile  module.yaml  prod.dockerfile
cowork-project/: .gitignore  README.md  build.gradle.kts  local.dockerfile  pom.xml  prod.dockerfile
cowork-promotion/: .gitignore  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
cowork-promotion/components/: CoworkLogo.vue  FeatureShowcase.vue  MemberCard.vue
cowork-promotion/data/: features.json  members.json
cowork-promotion/pages/: index.vue
cowork-roadmap/: README.md  build.gradle.kts  local.dockerfile  prod.dockerfile
cowork-roadmap/config/: eclipse-java-formatter.xml
cowork-team/: Dockerfile  README.md  build.gradle.kts  local.dockerfile  prod.dockerfile
cowork-user/: .gitignore  README.md  build.gradle.kts  docker-entrypoint.sh  local.dockerfile  mix.exs  prod.dockerfile
cowork-user/config/: config.exs  runtime.exs
cowork-voice/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  local.dockerfile  prod.dockerfile
cowork-voice/docs/: docs.go  swagger.json  swagger.yaml
docker/: elasticsearch.dockerfile
docker/livekit/: livekit-cloud.yaml  livekit.yaml
docker/minio/: cors.json
docker/mysql/: init.sh
docker/postgres/: init.sh  init.sql
docker/prometheus/: prometheus.yml
docs/: 20260512_TODO.md  20260526_TODO.md  DEVELOPMENT.md  LOCAL_RUN_GUIDE.md  api-documentation.md  gateway-config.md  grafana-logging-spec.md  makefile-guide.md  plan-team-invite.md  preference-settings.md  spec-github-pr-board.md
docs/specs/: 14-read-status.md
docs/todo/: .gitkeep  README.md
gradle/: libs.versions.toml
scripts/: .gitignore  bump.sh  contrib_report.py  create-pr.sh  gen_spam_commits.py  init-log-dirs.sh  pr_contrib_delta.py  start-authorization.sh  start-chat.sh  start-infra.sh  start-voice.sh
(+1044 files in other folders)
