# Bazel (bzlmod) build for cowork-gateway — a Spring Cloud Gateway PoC.
# Coexists with Gradle: only cowork-gateway has a BUILD.bazel, other modules are ignored by Bazel.
module(
    name = "cowork_server",
    version = "20260602.0",
)

bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "rules_spring", version = "2.6.3")

# Expose the bundled Kotlin compiler repo so BUILD files can reference the
# all-open compiler plugin (kept in lockstep with the rules_kotlin compiler version).
rules_kotlin_extensions = use_extension(
    "@rules_kotlin//src/main/starlark/core/repositories:bzlmod_setup.bzl",
    "rules_kotlin_extensions",
)
use_repo(rules_kotlin_extensions, "com_github_jetbrains_kotlin")

# Use the custom Kotlin toolchain defined in //:BUILD.bazel (JDK 21, language 2.1).
register_toolchains("//:kotlin_toolchain")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Versions resolved from the BOMs below.
        "org.springframework.cloud:spring-cloud-starter-gateway",
        "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client",
        "org.springframework.cloud:spring-cloud-starter-config",
        "org.springframework.cloud:spring-cloud-starter-bus-kafka",
        "org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j",
        "org.springframework.boot:spring-boot-starter-security",
        "org.springframework.boot:spring-boot-starter-actuator",
        "org.springframework.boot:spring-boot-starter-data-redis-reactive",
        "org.springframework.retry:spring-retry",
        "io.micrometer:micrometer-registry-prometheus",
        # Spring Boot loader: rules_spring unpacks it to the jar root for the executable jar.
        "org.springframework.boot:spring-boot-loader",
        # Explicit versions (not provided by the BOMs).
        "io.jsonwebtoken:jjwt-api:0.12.6",
        "io.jsonwebtoken:jjwt-impl:0.12.6",
        "io.jsonwebtoken:jjwt-jackson:0.12.6",
        "org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.8",
        "net.logstash.logback:logstash-logback-encoder:8.0",
        "org.jetbrains.kotlin:kotlin-reflect:2.1.20",
    ],
    boms = [
        "org.springframework.boot:spring-boot-dependencies:3.5.13",
        "org.springframework.cloud:spring-cloud-dependencies:2025.0.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
